  [22996] localedata: change LC_PAPER to en_US in es_BO locale
  [23005] Crash in __res_context_send after memory allocation failure
  [23036] regexec: Fix off-by-one bug in weight comparison
  [23037] initialize msg_flags to zero for sendmmsg() calls
  [23069] sigaction broken on riscv64-linux-gnu
  [23102] Incorrect parsing of consecutive $ variables in runpath entries
  [23137] s390: pthread_join sometimes block indefinitely (on 31bit and libc
    build with -Os)
  [23152] gd_GB: Fix typo in "May" (abbreviated)
  [23166] sunrpc: Remove stray exports without --enable-obsolete-rpc
  [23171] Fix parameter type in C++ version of iseqsig
  [23196] __mempcpy_avx512_no_vzeroupper mishandles large copies
  [23236] Harden function pointers in _IO_str_fields
  [23253] Set 387 and SSE2 rounding mode for tgamma on i386
  [23259] Unsubstituted ${ORIGIN} remains in DT_NEEDED for AT_SECURE
  [23264] libc: posix_spawnp wrongly executes ENOEXEC in non compat mode
  [23275] Race in pthread_mutex_lock while promoting to PTHREAD_MUTEX_ELISION_NP
  [23313] libio: Disable vtable validation in case of interposition
  [23349] Various glibc headers no longer compatible with <linux/time.h>
  [23363] stdio-common/tst-printf.c has non-free license
  [23456] Wrong index_cpu_LZCNT
  [23459] COMMON_CPUID_INDEX_80000001 isn't populated for Intel processors
  [23538] pthread_cond_broadcast: Fix waiters-after-spinning case
  [23562] signal: Use correct type for si_band in siginfo_t
  [23579] libc: Errors misreported in preadv2
  [23614] powerpc: missing CFI register information in __mpn_* functions
  [23690] Fix _dl_profile_fixup data-dependency issue
  [23709] Fix CPU string flags for Haswell-type CPUs
  [23821] si_band in siginfo_t has wrong type long int on sparc64
  [23822] ia64 static libm.a is missing exp2f, log2f and powf symbols
  [23861] rdlock stalls indefinitely on an unlocked pthread rwlock
  [23907] Incorrect double-free malloc tcache check disregards tcache size